# modelling_hazard_assessment

./: .gitignore  pyproject.toml  requirements.txt
agenda/: 001_echa_course_contents.md  002_general_introduction.md  003_theory_1_principles_of_ml.md  004_lab_1_introduction_to_jupyter.md  005_theory_2_concept_in_applied_modeling.md  006_lab_2_applied_modeling_ECHA_usecase.md  README  echa_course_contents.md
data-raw/: gpu_specs_prices.csv
datasets/: genotoxicity_dataset.xlsx
literature/: README
notebooks/: 01_lab1.ipynb  01_lab1_MLi.ipynb  01_lab1_final.ipynb  02_lab2.ipynb  02_lab2_MLi.ipynb  02_lab2_final.ipynb  README
notebooks/old_archive/: 01_lab1.ipynb  readme.txt
slides/: 000-lecture0-course-intro.pptx  README  echa-course.Rmd  echa-course.html  ~$theory-1-lecture.pptx
